--- a/packages/theme-chalk/src/message.scss
+++ b/packages/theme-chalk/src/message.scss
@@ -12,13 +12,25 @@
   line-height: 1;
   color: #fff;
   box-shadow: 0 2px 15px rgba(0,0,0,.15); // 增加盒子阴影
-  transition: 0.4s; // 过渡时间
+  // transition: 0.8s cubic-bezier(.16,.81,.86,.22); // 过渡时间
+  transition: opacity 0.3s, transform .4s, top 0.4s;
   white-space: nowrap; // 防止宽度被挤压而导致文字分行
 
   /*message内部子元素垂直居中*/
   display: flex;
   align-items: center;
   opacity: 0;
+
+  .message-icon {
+    line-height: 1;
+    .icon {
+        width: 16px;
+        height: 16px;
+        fill: currentColor;
+        margin-top: 2.5px;
+        margin-right: 5px;
+    }
+  }
 
   &-info {
     background: #f4f4f5;
